# Gungnir

./: CODE_of_CONDUCT.md  Cargo.toml  LICENSE-LGPLv3.md
gungnir/: Cargo.toml
gungnir-cli/: Cargo.toml
gungnir-cli/src/: main.rs
gungnir-core/: Cargo.toml
gungnir-core/src/: ad.rs  algorithm.rs  keypair.rs  lib.rs  slot.rs
gungnir-core/tests/: read.rs
gungnir/src/: error.rs  format.rs  hasher.rs  keypair.rs  lib.rs  reader.rs
gungnir/src/format/: ad.rs  algorithm.rs  keypair.rs  signature.rs
