[package]
name = "gungnir-cli"
version = "0.1.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
license = "GPL-3.0"
edition = "2018"
keywords = ["signature", "signing", "codesigning", "codesign", "hash"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
gungnir = { path = "../gungnir" }
clap = "3.0.0-beta.2"
rand = "0.7"
