[package]
name = "gungnir"
version = "0.1.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
license = "LGPL-3.0"
edition = "2018"
keywords = ["signature", "signing", "codesigning", "codesign", "hash"]
categories = ["cryptography"]

[dependencies]
gungnir-core = { path = "../gungnir-core" }
sha2 = "0.9"
sha3 = "0.9"
blake3 = "0.3"
ed25519-dalek = "1.0"
pqcrypto = { git = "https://github.com/aspenluxxxy/pqcrypto", rev = "bc818896d9cb018fb5d200a09cc96817c641a0ea", default-features = false, features = ["pqcrypto-falcon", "zeroize"] }
rand = "0.7"
zeroize = { version = "1.2", features = ["zeroize_derive"] }
