[package]
name = "gungnir"
version = "0.1.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
license = "LGPL-3.0"
edition = "2018"
keywords = ["signature", "signing", "codesigning", "codesign", "hash"]
categories = ["cryptography"]

[dependencies]
gungnir-core = { path = "../gungnir-core" }
digest = "0.9"
sha2 = "0.9"
sha3 = "0.9"
blake3 = "0.3"
ed25519-dalek = "1.0"
pqcrypto = { version = "0.12", default-features = false, features = ["pqcrypto-falcon"] }
rand = "0.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
