[package]
name = "gungnir"
version = "0.1.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
license = "MPL-2.0"
edition = "2018"
keywords = ["signature", "signing", "codesigning", "codesign", "hash"]
categories = ["cryptography"]

[dependencies]
base64 = "0.13"
blake3 = "0.3"
deku = "0.10"
digest = "0.9"
ed25519-dalek = "1.0"
pqcrypto = { version = "0.12", default-features = false, features = ["pqcrypto-falcon"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
sha3 = "0.9"
thiserror = "1.0"
